crates/pardosa-schema/tests/compile_fail/tuple_usize.stderr
error: EVT-004: GenomeSafe: usize has platform-dependent size. Use u32/u64 for portable serialization.
 --> tests/compile_fail/tuple_usize.rs:4:12
  |
4 |     pair: (usize, u32),
  |            ^^^^^
